# nagato-ai

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: nagato_ai.yaml
agent/: agent.py  anthropic.py  message.py  openai.py
docs/examples/: chain_example.py  coordinator_researcher_critic.py  youtube_transcription_clipping_graph.py  youtube_transcription_summary_graph.py  youtube_video_download_transcribe_clip_chain_example.py
nagato_ai/agent/: agent.py  anthropic.py  openai.py
nagato_ai/mission/: mission.py
nagato_ai/prompt/: templates.py
nagatoai_core/agent/: agent.py  anthropic.py  deepseek.py  factory.py  google.py  groq.py  message.py  openai.py
nagatoai_core/chain/: accumulator_link.py  adapter_link.py  agent_link.py  agent_param_converter.py  chain.py  ring.py  tool_link.py
nagatoai_core/common/: common.py  structured_logger.py
nagatoai_core/graph/: README.md  abstract_flow.py  abstract_node.py  agent_node.py  comparison_functions.py  conditional_flow.py  graph.py  parallel_flow.py  sequential_flow.py  tool_node.py  tool_node_with_params_conversion.py  transformer_flow.py  types.py  unfold_flow.py
nagatoai_core/graph/plan/: base_model_generator.py  plan.py  plan.xsd  validator.py  xml_parser.py
nagatoai_core/graph/planner/: objective.py  planner_agent.py
nagatoai_core/memory/: tool_run_cache.py
nagatoai_core/mission/: mission.py  task.py
nagatoai_core/prompt/: templates.py
nagatoai_core/prompt/template/: prompt_template.py
nagatoai_core/runner/: single_agent_task_runner.py  single_critic_evaluator.py  task_evaluator.py  task_runner.py
nagatoai_core/tool/: abstract_tool.py  registry.py  schema.py
nagatoai_core/tool/common/audio/: audio_segment_with_timestamps.py  utils.py
nagatoai_core/tool/lib/audio/: afplay.py  video_to_mp3.py
nagatoai_core/tool/lib/filesystem/: csv_reader.py  file_checker.py  text_file_reader.py  text_file_writer.py
nagatoai_core/tool/provider/: abstract_tool_provider.py  anthropic.py  google.py  openai.py
tests/data/: youtube_po_token.json
tests/nagatoai_core/: conftest.py
tests/nagatoai_core/agent/: test_agent_factory.py  test_anthropic_agent.py  test_google.py  test_google_agent.py  test_groq_agent.py  test_openai_agent.py
tests/nagatoai_core/graph/: __init__.py  test_agent_node.py  test_conditional_flow.py  test_graph.py  test_parallel_flow.py  test_sequential_flow.py  test_tool_node.py  test_tool_node_with_params_conversion.py  test_transformer_flow.py  test_unfold_flow.py
tests/tool/provider/: test_anthropic.py
(+31 files in other folders)
