[tool.poetry]
name = "nagatoai_core"
version = "0.16.0"
description = "Nagato-AI is an intuitive AI Agent library that works across multiple LLMs"
authors = ["Eddie Forson <eddie@edforson.me>"]
readme = "README.md"
package-mode = true
exclude = [
    ".env",
    ".env.*",
    "inputs",
    "outputs"
]

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.23.1"
rich = "^13.7.1"
requests = "^2.31.0"
pytest = "^8.1.1"
openai = "^1.14.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
groq = "^0.5.0"
google-generativeai = "^0.5.4"
python-dateutil = "^2.9.0.post0"
pytube = "^15.0.0"
python-levenshtein = "^0.25.1"
ffmpeg-python = "^0.2.0"
assemblyai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
