[tool.poetry]
name = "nagatoai_core"
version = "0.25.0"
description = "Nagato-AI is an intuitive AI Agent library that works across multiple LLMs"
authors = ["Eddie Forson <eddie@edforson.me>"]
readme = "README.md"
package-mode = true
exclude = [
    ".env",
    ".env.*",
    "inputs",
    "outputs"
]

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.23.1"
rich = "^13.7.1"
requests = "^2.31.0"
pytest = "^8.1.1"
openai = "^1.14.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
groq = "^0.5.0"
python-dateutil = "^2.9.0.post0"
pytube = "^15.0.0"
python-levenshtein = "^0.25.1"
ffmpeg-python = "^0.2.0"
assemblyai = "^0.28.0"
langfuse = "^2.40.0"
chardet = "^5.2.0"
scrapingbee = "^2.0.1"
pytubefix = "^8.6.0"
structlog = "^25.1.0"
pydub = "^0.25.1"
google-genai = "^1.1.0"
protobuf = "^5.29.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"
pylint = "^3.3.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["nagatoai_core"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "Nagato AI"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["nagatoai_core"]